# my_realtor

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  MULTI_STATE_DATA_STRATEGY.md  PHASE_1_COMPLETE.md  PROJECT_CONTEXT.md  README.md  STORAGE.md  docker-compose.production.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.ingestion  crontab
backend/src/: lib.rs  main.rs
backend/src/ingestion/: enrich.rs  fetch.rs  mod.rs  parse.rs  types.rs  utils.rs  write.rs
database/init/: 01_simple_init.sql  02_seed_data.sql  03_ingestion_schema.sql  03_optimized_schema.sql
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/lib/: api.ts  types.ts  utils.test.ts
frontend/src/routes/: +page.svelte
scripts/: README.md  deploy.sh  local-db-tunnel.sh  test-local-deployment.sh
